enhnaced version of layout sidebar, and header

--- a/app/globals.css
+++ b/app/globals.css
@@ -138,6 +138,7 @@
 :root {
   --color-primary: #319795; /* Example teal color */
   --color-primary-dark: #2c7a7b; /* Darker shade for hover effect */
+  --color-lightgreen-dark: #00fbff; /* Darker shade for hover effect */
   --color-secondary: #e2e8f0; /* Example gray color */
 }
 
