catogerization model and pdf text extracter build successfully

--- a/app/globals.css
+++ b/app/globals.css
@@ -140,6 +140,7 @@
   --color-primary-dark: #2c7a7b; /* Darker shade for hover effect */
   --color-lightgreen-dark: #00fbff; /* Darker shade for hover effect */
   --color-secondary: #e2e8f0; /* Example gray color */
+  --model-bg: #00000074; /* Example gray color */
 }
 
 
