fix the design of goal page and model design also some error and bugs

--- a/app/globals.css
+++ b/app/globals.css
@@ -172,3 +172,7 @@
   animation: rotateEffects 20s linear infinite;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
