--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+
 @import "tailwindcss";
 @import "tw-animate-css";
+
 
 @custom-variant dark (&:is(.dark *));
 
@@ -135,10 +139,18 @@
   display: none; /* For Chrome, Safari, and Edge */
 }
 
+
+
 :root {
-  --color-primary: #319795; /* Example teal color */
-  --color-primary-dark: #2c7a7b; /* Darker shade for hover effect */
-  --color-lightgreen-dark: #00fbff; /* Darker shade for hover effect */
+  --color-primary: #319795; 
+  --color-primary-dark: #2c7a7b; 
+  --color-lightgreen-dark: #00fbff;
+
+  --color-black: #151718; 
+  --color-heading: #303031; 
+  --color-para: #848484; 
+  /* --number-font: "IBM Plex Sans", sans-serif; */
+
   --color-secondary: #e2e8f0; /* Example gray color */
   --model-bg: #00000074; /* Example gray color */
 }
@@ -175,4 +187,9 @@
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
+}
+
+.IbmFont{
+  /* font-family: "Space Grotesk", sans-serif; */
+  font-family: "IBM Plex Sans", sans-serif; 
 }
